init: migrate project to gradle-test-env branch for Gradle Testing